# vectorust

./: .gitignore  Cargo.toml  LICENSE  README.md  gulpfile.js  jest.config.js  package.json  tsconfig.json
src/: lib.rs
testing/: numbers.test.ts  sltk.test.ts  vectorust.test.ts
