[package]
name = "sltk"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
regex = "1.10.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
# "s" for small size | "z" for small size with speed cost
# opt-level = "z"

# optimize for speed
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
